# s3pypi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
basic_auth/: handler.py  put_user.py  test_handler.py
cloudformation/: s3-iam-bucket-policy.json  s3-pypi-auth-template.yaml  s3-pypi-cloudfront-template.yaml  s3-pypi-template.yaml  s3-pypi-with-waf.json  s3-pypi.json
s3pypi/: __init__.py  __main__.py  cli.py  core.py  exceptions.py  index.py  locking.py  package.py  storage.py
s3pypi/admin/: __init__.py  __main__.py
s3pypi/infrastructure/: __init__.py  __main__.py  cloudformation.py
s3pypi/templates/: index.html.j2  master_index.html.j2
s3pypi_auth/: app.py  requirements.txt  users.py
s3pypi_infrastructure/: __main__.py  cloudformation.py
scripts/: migrate-s3-index.py
terraform/: main.tf
terraform/modules/s3pypi/: main.tf
terraform/modules/s3pypi/basic_auth/: handler.py  main.tf
tests/: conftest.py
tests/data/index/: hello_world.html  s3pypi.html
tests/data/projects/custom-dist-path/helloworld-dist/: hello_world-0.1.0-py3-none-any.whl
tests/data/projects/hello-world/: setup.py
tests/data/sdist_output/: distribution_costs-0.1.0  helloworld-0.1  s3pypi-0.1.3
tests/data/wheel_metadata/: hello-world-0.1.0
tests/integration/: conftest.py  test_locking.py  test_main.py  test_storage.py
tests/unit/: conftest.py  test_cli.py  test_core.py  test_index.py  test_package.py  test_storage.py
