[tool.poetry]
name = "s3pypi"
version = "1.1.0"
description = "CLI for creating a Python Package Repository in an S3 bucket"
authors = [
    "Matteo De Wint <matteo@gorilla.co>",
    "Ruben Van den Bossche <ruben@gorilla.co>",
]

[tool.poetry.scripts]
s3pypi = "s3pypi.__main__:main"

[tool.poetry.dependencies]
boto3 = "^1.26.32"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^5.0.0"
isort = "^5.11.3"
moto = "^4.0.12"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.black]
exclude = '''
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
