[tool.poetry]
name = "s3pypi"
version = "1.1.1"
description = "CLI for creating a Python Package Repository in an S3 bucket"
authors = [
    "Matteo De Wint <matteo@gorilla.co>",
    "Ruben Van den Bossche <ruben@gorilla.co>",
]

[tool.poetry.scripts]
s3pypi = "s3pypi.__main__:main"

[tool.poetry.dependencies]
boto3 = "^1.34.11"
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^5.0.4"
isort = "^5.13.2"
moto = "^4.2.12"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.black]
exclude = '''
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
